--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
+  <a href="https://learning.flatironschool.com/courses/2027/pages/windows-10-local-environment-set-up?module_item_id=52108">Flatiron Env Set</a>
   Absolute Path (external link)
-
+  <a href="about.html">About Us</a>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
+  <a href="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" target="_blank">ironboard</a>
 
 </body>
 </html>
+
